# translatador

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-java.yml  publish-java.yml
.github/workflows/common/java-natives/linux/: action.yml
.github/workflows/common/java-natives/macos/: action.yml
.github/workflows/common/java-natives/windows/: action.yml
bindings/java/: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
bindings/java/buildSrc/src/main/groovy/org/lovetropics/translatador/: platforms.groovy
bindings/java/example/: build.gradle
bindings/java/example/src/main/java/org/lovetropics/translatador/: TranslatadorExample.java
bindings/java/native/: CMakeLists.txt  build.gradle
bindings/java/native/src/: translatador.c
bindings/java/src/main/java/org/lovetropics/translatador/: DetectedLanguage.java  LanguageDetector.java  ModelException.java  PivotedTranslationModel.java  Platform.java  Translatador.java  TranslatadorNative.java  TranslationBatch.java  TranslationException.java  TranslationModel.java
examples/: CMakeLists.txt  simple.c
include/: translatador.h
src/: tokenization.cpp  tokenization.h  translatador.cpp
